@@ -4,6 +4,7 @@
 
 - Button to web UI to play last recorded voice commmand
 - RHASSPY_LOG_LEVEL environment variable
+- Web UI feedback during download
 
 ### Changed
 - Moved $profile/kaldi/custom_words.txt to $profile/kaldi_custom_words.txt
